Removed Admin Bar. Moved footer to custom function. Footer style fixes. Single fixes.
Removed the admin bar as the margins were messing up with the full page layout and things were getting cut off.

Moved the footer to a custom function so it can be called from multiple parts of the theme. Fixed styling in the footer.

Fixed issues with the single where the page was getting rendered as a full page. Also fixed the handling of the footer so that the shadow overflow is fixed.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -219,6 +219,7 @@ footer {
 html {
 	text-rendering: optimizeLegibility !important;
 	-webkit-font-smoothing: antialiased !important;
+	margin-top: 0 !important;
 }
 
 body {
@@ -236,7 +237,7 @@ article {
 	width: 100%;
 	height: 100%;
 	background: #444;
-	box-shadow: inset 0px 0px 164px -24px rgba(0,0,0,0.75);
+	box-shadow: 0, 0, 0, inset 0px 0px 164px -24px rgba(0,0,0,0.75);
 	transition: background 0.5s;
 }
 
@@ -277,13 +278,18 @@ p {
 	display: none
 }
 
-div.tableCell {
+div.tableCell, .single article, .single footer {
 	vertical-align: top;
 	box-shadow: 0px 0px 30px 0px rgba(50, 50, 50, 0.75);
 	display: block;
 	width: 900px;
 	margin: 0 auto;
 	background: #fff;
+}
+
+#footer {
+	background: #444;
+	overflow: hidden;
 }
 
 .home article {
@@ -294,7 +300,7 @@ div.tableCell {
 
 .copyright {
 	position: absolute;
-	bottom: 40px;
+	bottom: 15px;
 	right: 40px;
 	font-size: 12px;
 }
